Scaling with indiv. origins silently disables proportional edit #36453

Closed
opened 2013-08-13 07:44:29 +02:00 by Jason Clarke · 5 comments

%%%--- Operating System, Graphics card ---

OS X 10.8.4, AMD 5770

- Blender version with error, and version that worked ---

r59079

- Short description of error ---

If you try and scale a face or sets of faces with proportional edit mode and pivot point set to "individual origins", proportional edit mode will just silently turn itself off. Even if prop. edit can't work in this case, just quietly disabling prop. edit doesn't seem like the best way to handle this. There's no indication at all as to why proportional edit is turning itself off.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

I've attached a blend file already set up, (individual origins, proportional edit on, face selected, etc). Just grab the manipulator or hit S and watch proportional edit turn itself off without a peep.
%%%

%%%--- Operating System, Graphics card --- OS X 10.8.4, AMD 5770 - Blender version with error, and version that worked --- r59079 - Short description of error --- If you try and scale a face or sets of faces with proportional edit mode and pivot point set to "individual origins", proportional edit mode will just silently turn itself off. Even if prop. edit can't work in this case, just quietly disabling prop. edit doesn't seem like the best way to handle this. There's no indication at all as to why proportional edit is turning itself off. - Steps for others to reproduce the error (preferably based on attached .blend file) --- I've attached a blend file already set up, (individual origins, proportional edit on, face selected, etc). Just grab the manipulator or hit S and watch proportional edit turn itself off without a peep. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%I guess the bug is that the transform tool is actually turning this off permanently? I think it's ok that it would get turned off silently while the transform tool runs, but it should be temporary.%%%

%%%I guess the bug is that the transform tool is actually turning this off permanently? I think it's ok that it would get turned off silently while the transform tool runs, but it should be temporary.%%%

%%%Fix in svn revision 59362, thanks for the report.%%%

%%%Fix in svn revision 59362, thanks for the report.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%By the way, why doesn't it work ? Is it a work in progress ? (I just tried to use proportional edit when scaling two face islands in individual origins and was very let down)%%%

%%%By the way, why doesn't it work ? Is it a work in progress ? (I just tried to use proportional edit when scaling two face islands in individual origins and was very let down)%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36453
No description provided.