Fix #36453: scaling faces with individual origins would permanently turn of proportional editing because this combination doesn't work, but it should be only temporary.